syntax = "proto3";

package api;

import "github.com/iheanyi/grpc-phonebook/phonebook.proto";

service PhoneBook {
  rpc CreateContact(CreateContactReq) returns (CreateContactRes);
  rpc ListContacts(ListContactsReq) returns (ListContactsRes);
}

message CreateContactReq {
  string name = 1;
  string email = 2;
  repeated grpc_phonebook.PhoneNumber phone_numbers = 3;
}

message CreateContactRes {
  grpc_phonebook.Contact contact = 1;

}

message ListContactsReq {}

message ListContactsRes {
  repeated grpc_phonebook.Contact contacts = 1;
}
