syntax = "proto3";

package contact;

message Contact {
  string name = 1;
  string email = 2;

  repeated PhoneNumber phone_numbers = 3;
  PhoneNumber home = 4;
  PhoneNumber mobile = 5;
  PhoneNumber work = 6;
}

message PhoneNumber {
  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  string number = 1;
  PhoneType type = 2;
}
